src/snapshots/rura__presets_widget__tests__delete.snap
---
source: src/presets_widget.rs
expression: terminal.backend()
---
"                                        "
"        ┌ Confirm ──────────────┐       "
"        │ Are you sure you want │       "
"    ┌ Pr│  delete this preset?  │──┐    "
"    │[j]│                       │  │▓   "
"    │   │       jq -c ''        │so│▓   "
"    └───│                       │──┘▓   "
"     ▓▓▓│      [Y]es [N]o       │▓▓▓▓   "
"        └───────────────────────┘       "
"                                        "
