src/snapshots/rura__presets_widget__tests__new_empty.snap
---
source: src/presets_widget.rs
expression: terminal.backend()
---
"                                        "
"                                        "
"                                        "
"                                        "
"    ┌ Presets ─────────────────────┐    "
"    │[x] some -x command | grep oth│▓   "
"    └──────────────────────────────┘▓   "
"     ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓   "
"                                        "
"                                        "
